# gn_module_conservation_strategy

./: .editorconfig  .gitignore  .rsync-exclude.txt  CHANGELOG.fr.md  CHANGELOG.md  README.md  install_gn_module.py  manifest.toml  pyproject.toml  setup.py
backend/: blueprint.py  models.py  repositories.py  utils.py
backend/gn_module_conservation_strategy/: __init__.py  blueprint.py  conf_schema_toml.py  models.py  repositories.py
backend/gn_module_conservation_strategy/migrations/: 858d1ee4778a7135_add_specific_data.py  bf92b357ee67b921_create_schema.py  ea9abb70965f_declare_available_perms.py
backend/gn_module_conservation_strategy/migrations/data/: data.sql  install_default_data.sql  nomenclatures.csv  schema.sql
config/: conf_gn_module.sample.toml  conf_schema_toml.py  settings.default.ini  settings.sample.ini
data/: install_default_data.sql  install_schema.sql  taxa_copy.sql  taxa_delete.sql  taxa_insert.sql  uninstall.sql
docs/: 02_migrate_v0.3.0_to_v0.4.0.sql  copy_data_from_v0.1_to_v0.2.sql  import-data.md  update_nomenclatures.sql  v0.4_update_nomenclatures.sql  v0.4_update_regions.sql
docs/resources/: conservation_strategy_module.postman_collection.json
frontend/: package-lock.json  package.json  tsconfig.sample.json
frontend/app/: app-routing.module.ts  app.component.html  app.component.ts  gnModule.module.ts  gnModule.routes.ts
frontend/app/components/breadcrumbs/: breadcrumbs.component.ts
frontend/app/root/: root.component.html  root.component.ts
frontend/app/services/: config.service.ts  data.service.ts
frontend/app/shared/models/: assessment.model.ts  stats.model.ts
frontend/app/shared/pipes/: join.pipe.ts  pluck.pipe.ts  replace-tags.pipe.ts  sort-by.pipe.ts
frontend/app/shared/services/: config.service.ts  custom-paginator.intl.ts  data.service.ts  store.service.ts
frontend/app/strategy/: strategy.component.html  strategy.component.scss  strategy.component.ts
frontend/app/strategy/home/: home.component.html  home.component.scss  home.component.ts
frontend/app/strategy/planning/: planning.component.html  planning.component.scss  planning.component.ts  planning.datasource.ts
frontend/app/strategy/taxa-list/: taxa-list.component.html  taxa-list.component.scss  taxa-list.component.ts  taxa.datasource.ts
frontend/app/taxon-detail/: taxon-detail.component.html  taxon-detail.component.scss  taxon-detail.component.ts
frontend/app/taxon-detail/assessments-list/: assessments-list.component.html  assessments-list.component.scss  assessments-list.component.ts
frontend/assets/templates/: .gitignore  home.tpl.sample.html
(+28 files in other folders)
